# microcontroller-projects

./: README.md  pyproject.toml
arduino/: README.md
arduino/projects/CanForwarder/: CanForwarder.ino
arduino/projects/CheckWifi101FirmwareVersion/: CheckWifi101FirmwareVersion.ino
arduino/projects/FirmwareUpdater/: FirmwareUpdater.ino
arduino/projects/RadioHead69_RawDemo_RX/: RadioHead69_RawDemo_RX.ino
arduino/projects/RadioHead69_RawDemo_TX/: RadioHead69_RawDemo_TX.ino
arduino/projects/WiFiWebClient/: WiFiWebClient.ino  arduino_secrets.h
arduino/projects/onboard_neopixel_test/: onboard_neopixel_test.ino
circuitpython/flashes/adafruit_feather_esp32s2_tft/: 9.1.3.uf2
circuitpython/flashes/adafruit_feather_esp32s3_tft/: 9.1.3.uf2
circuitpython/flashes/adafruit_feather_rp2040_prop_maker/: 9.1.3.uf2
circuitpython/flashes/adafruit_feather_rp2040_rfm/: 9.1.3.uf2
circuitpython/flashes/adafruit_kb2040/: 9.1.3.uf2
circuitpython/flashes/circuitplayground_express/: 9.1.3.uf2
circuitpython/projects/bearbase/: code.py  requirements.txt
circuitpython/projects/behindbar/: code.py  palettes.py  patterns.py  settings.toml
circuitpython/projects/can_test_receive/: code.py  project.json  requirements.txt
circuitpython/projects/can_test_transmit/: code.py  project.json
circuitpython/projects/circuitplayground_infrared/: code.py  project.json
mcutils/: constants.py  project.py
mcutils/circuitpython/: dependencies.py  dev.py
mcutils/cli/: arduino.py  circuitpython.py  dev.py  devices.py  main.py
mcutils/flash/: circuitpython.py
(+30 files in other folders)
