[tool.poetry]
name = "microcontroller-projects"
version = "0.1.0"
description = ""
authors = ["Emma Knospe"]
readme = "README.md"
packages = [
    { include = "mcutils", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
boto3 = "^1.35.14"
python-dotenv = "^1.0.1"
tqdm = "^4.66.5"
packaging = "^24.1"
simple-term-menu = "^1.6.4"
circuitpython-stubs = "^9.1.3"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mc = "mcutils.cli.main:cli"